overflow fixed

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     padding: 10px;
     background:linear-gradient(to bottom, #4a1fe7e0, #6022c442 90%);
     flex-wrap: nowrap;
+    overflow: hidden;
 }
 
 .wrapper {
